2007-09-04  mefyl  <mefyl@lrde.epita.fr>

	Add reference trait.
	* select-ref.hh: New. Make a type a reference, without forming
        reference to reference.
	* Makefile.am: Add file.

2007-08-30  Matthieu Nottale  <nottale@gostai.com>

	Fix assert in ~Semaphore.
	* semaphore.hxx: assert(!err) as sem_close and sem_destroy are returning 0 on success.

2007-08-07  Benoit Sigoure  <tsuna@lrde.epita.fr>

	* compiler.hh: Remove debug traces when compiling with NDEBUG.

2007-08-06  Benoit Sigoure  <tsuna@lrde.epita.fr>

	* shared-ptr.hh,
	* shared-ptr.hxx: Fix Doxygen comments.

2007-07-31  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove a useless call to op<<.
	* compiler.hh (ECHO): Let the compiler concatenate strings.

2007-07-24  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Properly use BOOST_CPPFLAGS.
	* Makefile.am (libport_la_CPPFLAGS): Add BOOST_CPPFLAGS.

2007-07-16  Akim Demaille  <demaille@gostai.com>

	Simplify libport/Makefile.am
	* libport/Makefile.am: libport_srcdir is no longer needed, and we
	can use nobase_.

2007-07-16  Akim Demaille  <demaille@gostai.com>

	Remove libport.mk
	libport.mk no longer exists, it became more of a problem than a
	solution.  From now on, shipped libports must be used with its
	own Makefile.am, which means that the following changes must be
	done by the users:
	- stop including libport.mk
	- add libport in the beginning of the top-level Makefile.am's
	  SUBDIRS.
	* libport.mk: Remove...
	* Makefile.am: inlined here.
	* libport-sources.mk (libport_la): Fix location.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	Makefile.am
	* Makefile.am: New.
	Now users of a shipped libport should no longer include
	libport.mk nor libport-sources.mk, rather they should use
	this file like for any other directory.

2007-07-13  Akim Demaille  <demaille@gostai.com>

	* shared-ptr.hh, shared-ptr.hxx (make_shared_ptr): New.

2007-07-12  Akim Demaille  <akim.demaille@gmail.com>

	Simplify/improve deref
	* deref.hxx: Remove useless this->.